# point_geometric_features

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  demo.py  install.sh  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: 0-bug-report.yaml  1-feature-request.yaml  2-documentation.yaml
.github/workflows/: tests.yml  wheels.yml
include/: nn_search.hpp  pca.hpp  pgeof.hpp
python/: pgeof_cpy.cpp  setup.py
src/: CMakeLists.txt  __init__.py  pgeof.cpp  pgeof2_ext.cpp  pgeof_cpy.cpp  pgeof_ext.cpp
src/pgeof/: __init__.py
src/pgeof2/: __init__.py
tests/: bench_jakteristics.py  bench_knn.py  bench_pgeof.py  helpers.py  test_pgeof.py
