[build-system]
requires = ["wheel", "setuptools", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pgeof"
version = "0.0.2"
readme = "README.md"
description = "Compute the geometric features associated with each point's neighborhood:"
requires-python = ">=3.8,<3.13"
license = {file = "LICENSE"}
authors = [
  {name = "Loic Landrieu", email = "loic.landrieu@enpc.fr"},
  {name = "Damien Robert", email = "damien.robert@uzh.ch"}
]
keywords = ["point clouds", "features", "3D", "LiDAR"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering"
]

dependencies = [
    "numpy"
]

[project.urls]
homepage = "https://github.com/drprojects/point_geometric_features"
repository = "https://github.com/drprojects/point_geometric_features"

[tool.cibuildwheel]
build = "cp3{8,9,10,11,12}-*"
